Updated TURN server

--- a/index.html
+++ b/index.html
@@ -248,15 +248,15 @@
                 <p>If you're having trouble connecting:</p>
                 <ol>
                     <li>Make sure both users are on modern browsers (Chrome, Firefox, Edge)</li>
-                    <li>Try connecting on the same WiFi network first</li>
-                    <li>If on different networks, use the manual ID connection method</li>
+                    <li>Wait a moment for the TURN server connection to establish</li>
+                    <li>If on different networks, connections may take longer to establish</li>
                     <li>Disable VPNs or firewalls that might block WebRTC</li>
-                    <li>If all else fails, try alternative communication methods like screen sharing your game</li>
+                    <li>If all else fails, try the manual connection option</li>
                 </ol>
                 
                 <div class="webrtc-info">
-                    <p><i class="fas fa-info-circle"></i> WebRTC connections work best on the same network or with TURN servers</p>
-                    <p>This is a peer-to-peer application without centralized servers</p>
+                    <p><i class="fas fa-info-circle"></i> This app uses TURN servers to help establish connections across networks</p>
+                    <p>Please be patient while connections are set up</p>
                 </div>
             </div>
             <div class="modal-buttons">
