--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- Connection Error<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -194,11 +194,16 @@
     <div id="connection-error-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Connection Error</h2>
+                <h2><i class="fas fa-exclamation-triangle"></i> Connection Error</h2>
             </div>
             <div class="modal-body">
                 <p id="connection-error-message">There was a problem connecting to the room.</p>
                 <p>Make sure the Room ID is correct and try again.</p>
+                <div class="error-actions">
+                    <button id="show-troubleshooting" class="button secondary-button">
+                        <i class="fas fa-question-circle"></i> Troubleshooting
+                    </button>
+                </div>
             </div>
             <div class="modal-buttons">
                 <button id="retry-connection-button" class="modal-button primary-button">Retry</button>
@@ -267,7 +272,7 @@
     </div>
 
     <!-- PeerJS library -->
-    <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
+    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     
     <!-- App Scripts -->
     <script src="app.js"></script>
