attempting to fix MP

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- Connection Error<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -180,9 +180,6 @@
             <div class="modal-body">
                 <p>Enter your name to continue playing multiplayer games with friends!</p>
                 <input type="text" id="player-name-input" placeholder="Your Name" maxlength="20">
-                <p class="disclaimer-text" style="font-size: 0.8rem; color: #777; margin-top: 10px;">
-                    By continuing, you agree to our <a href="#" onclick="showPrivacyPolicy(); return false;">Privacy Policy</a>.
-                </p>
             </div>
             <div class="modal-buttons">
                 <button id="continue-button" class="modal-button primary-button">Continue</button>
