attempting new mulitplayer implementation

--- a/index.html
+++ b/index.html
@@ -367,8 +367,9 @@
     </div>
     
     <!-- App Scripts -->
-    <script src="./app.js"></script>
-    <script src="./minesweeper.js"></script>
+    <script src="./webrtc.js"></script>
+    <script src="./connection-manager.js"></script>
+    <script src="./game-modules.js"></script>
 
     <script>
         // Ensure continue button works
